# Electrolux_homework

./: CMakeLists.txt
Inc/: ELLUX_USART_API.h
Test/: CMakeLists.txt  Test.c
